--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node": ">= 0.10.0"
   },
   "dependencies": {
+    "lodash": "~3.6.0",
     "optimist": "~0.6.1"
   },
   "devDependencies": {
