--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.1.8",
   "repository": {
     "type": "git",
-    "url": "git@github.com:sapegin/richtypo.git"
+    "url": "git://github.com/sapegin/richtypo.git"
   },
   "main": "./richtypo.js",
   "bin": {
