--- a/package.json
+++ b/package.json
@@ -27,14 +27,16 @@
     "optimist": "~0.6.1"
   },
   "devDependencies": {
+    "chai": "~3.4.1",
     "eslint": "~1.10.3",
-    "jasmine-node": "~1.14.5",
+    "mocha": "~2.3.4",
     "sweet2": "~1.0.2"
   },
   "scripts": {
-    "test": "npm run lint && npm run jasmine",
+    "test": "npm run lint && npm run mocha",
     "prepublish": "npm run example",
-    "jasmine": "jasmine-node test",
+    "mocha": "mocha test",
+    "mocha:watch": "mocha --watch --reporter min test",
     "lint": "eslint richtypo.js",
     "example": "node example/src"
   },
