--- a/package.json
+++ b/package.json
@@ -34,16 +34,18 @@
   "devDependencies": {
     "chai": "~3.4.1",
     "eslint": "~1.10.3",
+    "gh-pages": "~0.8.0",
     "mocha": "~2.3.4",
     "sweet2": "~1.0.2"
   },
   "scripts": {
     "test": "npm run lint && npm run mocha",
-    "prepublish": "npm run example",
+    "prepublish": "npm run example && npm run gh-pages",
     "mocha": "mocha test",
     "mocha:watch": "mocha --watch --reporter min test",
     "lint": "eslint richtypo.js",
-    "example": "node example/src"
+    "example": "node example/src",
+    "gh-pages": "gh-pages -d example"
   },
   "keywords": [
     "typography",
