Try to publish example to make Tonic work.

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "files": [
     "richtypo.js",
     "bin",
-    "rules"
+    "rules",
+    "example/example.js"
   ],
   "engines": {
     "node": ">= 0.10.0"
