--- a/package.json
+++ b/package.json
@@ -34,17 +34,21 @@
   },
   "devDependencies": {
     "chai": "~3.4.1",
-    "eslint": "~1.10.3",
+    "eslint": "^4.1.1",
+    "eslint-config-tamia": "^4.1.1",
+    "eslint-plugin-prettier": "^2.1.2",
     "fledermaus": "~4.0.0",
     "gh-pages": "~0.8.0",
-    "mocha": "~2.3.4"
+    "mocha": "~2.3.4",
+    "prettier": "^1.5.2"
   },
   "scripts": {
-    "test": "npm run lint && npm run mocha",
+    "pretest": "npm run lint",
+    "test": "npm run mocha",
+    "lint": "eslint . --cache --fix",
     "postpublish": "npm run example && npm run gh-pages",
     "mocha": "mocha test",
     "mocha:watch": "mocha --watch --reporter min test",
-    "lint": "eslint richtypo.js",
     "example": "node example/src",
     "gh-pages": "gh-pages -d example"
   },
