--- a/package.json
+++ b/package.json
@@ -33,22 +33,22 @@
     "optimist": "~0.6.1"
   },
   "devDependencies": {
-    "chai": "~3.4.1",
     "eslint": "^4.1.1",
     "eslint-config-tamia": "^4.1.1",
     "eslint-plugin-prettier": "^2.1.2",
     "fledermaus": "~4.0.0",
     "gh-pages": "~0.8.0",
-    "mocha": "~2.3.4",
+    "jest": "^20.0.4",
     "prettier": "^1.5.2"
   },
   "scripts": {
     "pretest": "npm run lint",
-    "test": "npm run mocha",
+    "test": "npm run test:jest",
+    "test:jest": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "lint": "eslint . --cache --fix",
     "postpublish": "npm run example && npm run gh-pages",
-    "mocha": "mocha test",
-    "mocha:watch": "mocha --watch --reporter min test",
     "example": "node example/src",
     "gh-pages": "gh-pages -d example"
   },
