Fix: Remove Node 0.10 and 0.12 support
BREAKING CHANGE:

No support for Node 0.10 and 0.12.

--- a/package.json
+++ b/package.json
@@ -22,11 +22,10 @@
   "files": [
     "richtypo.js",
     "bin",
-    "rules",
-    "example/example.js"
+    "rules"
   ],
   "engines": {
-    "node": ">= 0.10.0"
+    "node": ">=4"
   },
   "dependencies": {
     "lodash": "~4.6.1",
