--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
 language: node_js
 node_js:
-  - '0.10'
-  - '0.12'
-  - '4'
-  - '5'
+  - 4
+  - 6
+  - 8
 after_success:
   - npm run semantic-release
 branches:
   except:
     - /^v\d+\.\d+\.\d+$/
+cache:
+  directories:
+    - node_modules
