--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,9 @@
 {
-  "extends": "tamia"
+  "extends": "tamia",
+	"parserOptions": {
+		"sourceType": "script"
+	},
+	"rules": {
+		"strict": [2, "global"]
+	}
 }
