--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,8 @@
 		"sourceType": "script"
 	},
 	"rules": {
-		"strict": [2, "global"]
+		"strict": [2, "global"],
+		"prefer-spread": 0,
+		"prefer-rest-params": 0
 	}
 }
