--- a/package.json
+++ b/package.json
@@ -16,20 +16,14 @@
   },
   "license": "MIT",
   "main": "./richtypo.js",
-  "bin": {
-    "richtypo": "./bin/cli.js"
-  },
   "files": [
     "richtypo.js",
-    "bin",
     "rules"
   ],
   "engines": {
     "node": ">=4"
   },
-  "dependencies": {
-    "optimist": "^0.6.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "eslint": "^4.1.1",
     "eslint-config-tamia": "^4.1.1",
