--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,13 @@
 {
-  "extends": "tamia",
+	"extends": "tamia",
 	"parserOptions": {
 		"sourceType": "script"
 	},
 	"rules": {
-		"strict": [2, "global"],
+		"strict": [
+			2,
+			"global"
+		],
 		"prefer-spread": 0,
 		"prefer-rest-params": 0
 	}
