--- a/package.json
+++ b/package.json
@@ -30,9 +30,7 @@
     "fledermaus": "^4.0.0",
     "gh-pages": "^1.2.0",
     "jest": "^23.4.1",
-    "prettier": "^1.13.7",
-    "semantic-release": "^6.3.6",
-    "semantic-release-tamia": "^1.1.1"
+    "prettier": "1.13.7"
   },
   "scripts": {
     "pretest": "npm run lint",
@@ -43,8 +41,7 @@
     "lint": "eslint . --cache --fix",
     "postpublish": "npm run example && npm run gh-pages",
     "example": "node --harmony example/src",
-    "gh-pages": "gh-pages -d example",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "gh-pages": "gh-pages -d example"
   },
   "keywords": [
     "typography",
@@ -61,11 +58,5 @@
     "ampersands",
     "russian",
     "english"
-  ],
-  "tonicExampleFilename": "example/example.js",
-  "release": {
-    "analyzeCommits": "semantic-release-tamia/analyzeCommits",
-    "generateNotes": "semantic-release-tamia/generateNotes",
-    "verifyRelease": "semantic-release-tamia/verifyRelease"
-  }
+  ]
 }
