--- a/package.json
+++ b/package.json
@@ -35,13 +35,15 @@
   "scripts": {
     "pretest": "npm run lint",
     "test": "npm run test:jest",
+    "posttest": "npm run format",
     "test:jest": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "lint": "eslint . --cache --fix",
     "postpublish": "npm run example && npm run gh-pages",
     "example": "node --harmony example/src",
-    "gh-pages": "gh-pages -d example"
+    "gh-pages": "gh-pages -d example",
+    "format": "prettier --write '**/*.{js,md}'"
   },
   "keywords": [
     "typography",
