--- a/package.json
+++ b/package.json
@@ -1,64 +1,68 @@
 {
-  "name": "richtypo",
-  "version": "0.0.0-development",
-  "description": "HTML typography enhancer for English and Russian texts",
-  "homepage": "https://github.com/sapegin/richtypo.js",
-  "author": {
-    "name": "Artem Sapegin",
-    "url": "http://sapegin.me/"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/sapegin/richtypo.js.git"
-  },
-  "bugs": {
-    "url": "https://github.com/sapegin/richtypo.js/issues"
-  },
-  "license": "MIT",
-  "main": "./richtypo.js",
-  "files": [
-    "richtypo.js",
-    "rules"
-  ],
-  "engines": {
-    "node": ">=6"
-  },
-  "dependencies": {},
-  "devDependencies": {
-    "eslint": "^5.1.0",
-    "eslint-config-tamia": "^6.0.0",
-    "fledermaus": "^4.0.0",
-    "gh-pages": "^1.2.0",
-    "jest": "^23.4.1",
-    "prettier": "1.13.7"
-  },
-  "scripts": {
-    "pretest": "npm run lint",
-    "test": "npm run test:jest",
-    "posttest": "npm run format",
-    "test:jest": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "lint": "eslint . --cache --fix",
-    "postpublish": "npm run example && npm run gh-pages",
-    "example": "node --harmony example/src",
-    "gh-pages": "gh-pages -d example",
-    "format": "prettier --write '**/*.{js,md}'"
-  },
-  "keywords": [
-    "typography",
-    "typo",
-    "html",
-    "quotes",
-    "prepositions",
-    "abbr",
-    "abbreviations",
-    "nobr",
-    "nbsp",
-    "punctuation",
-    "em-dash",
-    "ampersands",
-    "russian",
-    "english"
-  ]
+	"name": "richtypo",
+	"version": "4.0.0",
+	"description": "HTML typography enhancer with extensible rules",
+	"homepage": "https://github.com/sapegin/richtypo.js",
+	"author": {
+		"name": "Artem Sapegin",
+		"url": "http://sapegin.me/"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/sapegin/richtypo.js.git"
+	},
+	"bugs": {
+		"url": "https://github.com/sapegin/richtypo.js/issues"
+	},
+	"license": "MIT",
+	"main": "build/richtypo.js",
+	"files": [
+		"build"
+	],
+	"engines": {
+		"node": ">=6"
+	},
+	"devDependencies": {
+		"@babel/cli": "^7.1.2",
+		"@babel/core": "^7.1.2",
+		"@babel/preset-env": "^7.1.0",
+		"babel-core": "^7.0.0-bridge",
+		"babel-jest": "^23.6.0",
+		"babel-plugin-module-resolver": "^3.1.1",
+		"eslint": "^5.7.0",
+		"eslint-config-airbnb": "^17.1.0",
+		"fledermaus": "^4.0.0",
+		"gh-pages": "^1.2.0",
+		"jest": "^23.6.0",
+		"prettier": "^1.14.3"
+	},
+	"scripts": {
+		"build": "babel src --out-dir build --ignore **/*.test.js",
+		"watch": "babel -w src --out-dir build --ignore **/*.test.js",
+		"pretest": "npm run lint",
+		"test": "NODE_ENV=test jest",
+		"test:watch": "NODE_ENV=test jest --watch",
+		"test:coverage": "jest --coverage",
+		"posttest": "npm run format",
+		"lint": "eslint . --cache --fix",
+		"prepare": "npm run build",
+		"example": "node --harmony example/src",
+		"gh-pages": "gh-pages -d example",
+		"format": "prettier --write '**/*.{js,md}'"
+	},
+	"keywords": [
+		"typography",
+		"typo",
+		"html",
+		"quotes",
+		"prepositions",
+		"abbr",
+		"abbreviations",
+		"nobr",
+		"nbsp",
+		"punctuation",
+		"em-dash",
+		"ampersands",
+		"space"
+	]
 }
