--- a/packages/french/package.json
+++ b/packages/french/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "richtypo-uk-rules",
+	"name": "richtypo-french-rules",
 	"version": "1.0.0",
-	"description": "English Typography Rules for richtypo.js",
-	"main": "uk.js",
+	"description": "French Typography Rules for richtypo.js",
+	"main": "french.js",
 	"author": "David Bismut",
 	"license": "MIT",
 	"peerDependencies": {
