--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
 		"babel-jest": "^23.6.0",
 		"babel-plugin-module-resolver": "^3.1.1",
 		"eslint": "^5.7.0",
-		"eslint-config-airbnb": "^17.1.0",
+		"eslint-config-prettier": "^3.1.0",
+		"eslint-plugin-import": "^2.14.0",
+		"eslint-plugin-prettier": "^3.0.0",
 		"fledermaus": "^4.0.0",
 		"gh-pages": "^1.2.0",
 		"jest": "^23.6.0",
@@ -64,5 +66,8 @@
 		"em-dash",
 		"ampersands",
 		"space"
-	]
+	],
+	"dependencies": {
+		"eslint-config-airbnb-base": "^13.1.0"
+	}
 }
