--- a/package.json
+++ b/package.json
@@ -43,10 +43,9 @@
     "build": "babel src --out-dir build --ignore **/*.test.js",
     "watch": "babel -w src --out-dir build --ignore **/*.test.js",
     "pretest": "npm run lint",
-    "test": "NODE_ENV=test jest",
+    "test": "NODE_ENV=test node --harmony node_modules/.bin/jest",
     "test:watch": "NODE_ENV=test jest --watch",
     "test:coverage": "jest --coverage",
-    "posttest": "npm run format",
     "lint": "eslint . --cache --fix",
     "example": "node --harmony example/src",
     "gh-pages": "gh-pages -d example",
