--- a/package.json
+++ b/package.json
@@ -29,25 +29,29 @@
     "babel-core": "^7.0.0-bridge",
     "babel-jest": "^23.6.0",
     "babel-plugin-module-resolver": "^3.1.1",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-watch": "https://github.com/monathur/babel-watch.git",
     "eslint": "^5.7.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-prettier": "^3.0.0",
-    "fledermaus": "^4.0.0",
     "gh-pages": "^1.2.0",
     "jest": "^23.6.0",
-    "prettier": "^1.14.3"
+    "prettier": "^1.14.3",
+    "serve": "^10.0.2"
   },
   "scripts": {
     "build": "babel src --out-dir build --ignore **/*.test.js",
     "watch": "babel -w src --out-dir build --ignore **/*.test.js",
     "pretest": "npm run lint",
-    "test": "NODE_ENV=test node --harmony node_modules/.bin/jest",
-    "test:watch": "NODE_ENV=test jest --watch",
+    "test": "NODE_ENV=local node --harmony node_modules/.bin/jest",
+    "test:watch": "NODE_ENV=local jest --watch",
     "test:coverage": "jest --coverage",
     "lint": "eslint . --cache --fix",
-    "example": "node --harmony example/src",
+    "example": "NODE_ENV=local babel-node example/src",
+    "example:watch": "NODE_ENV=local babel-watch example/src",
+    "example:serve": "serve example",
     "gh-pages": "gh-pages -d example",
     "prepare": "npm run build",
     "publish": "npm publish",
@@ -67,5 +71,8 @@
     "em-dash",
     "ampersands",
     "space"
-  ]
+  ],
+  "dependencies": {
+    "@babel/node": "^7.0.0"
+  }
 }
