--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-prettier": "^3.0.0",
-    "gh-pages": "^1.2.0",
+    "gh-pages": "^2.0.1",
     "jest": "^23.6.0",
     "prettier": "^1.14.3",
     "serve": "^10.0.2"
@@ -48,14 +48,13 @@
     "test": "NODE_ENV=local node --harmony node_modules/.bin/jest",
     "test:watch": "NODE_ENV=local jest --watch",
     "test:coverage": "jest --coverage",
-    "lint": "eslint . --cache --fix",
+    "lint": "eslint src --cache --fix",
     "example": "NODE_ENV=local babel-node example/src",
     "example:watch": "NODE_ENV=local babel-watch example/src",
-    "example:serve": "serve example",
+    "example:serve": "serve example/build",
     "gh-pages": "gh-pages -d example",
     "prepare": "npm run build",
-    "publish": "npm publish",
-    "format": "prettier --write '**/*.{js,md}'"
+    "publish": "npm publish"
   },
   "keywords": [
     "typography",
