--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,4 @@
 {
-  "extends": ["airbnb-base", "prettier"],
-  "plugins": ["prettier"]
+	"extends": ["tamia", "prettier"],
+	"plugins": ["prettier"]
 }
