french → fr and uk → en

--- a/packages/en/package.json
+++ b/packages/en/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "richtypo-uk-rules",
+	"name": "richtypo-rules-en",
 	"version": "1.0.0",
 	"description": "English Typography Rules for richtypo.js",
 	"main": "uk.js",
