--- a/package.json
+++ b/package.json
@@ -1,30 +1,9 @@
 {
-	"name": "richtypo",
-	"version": "4.0.0",
-	"description": "HTML typography enhancer with extensible rules",
-	"homepage": "https://github.com/sapegin/richtypo.js",
-	"author": {
-		"name": "Artem Sapegin",
-		"url": "http://sapegin.me/"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/sapegin/richtypo.js.git"
-	},
-	"bugs": {
-		"url": "https://github.com/sapegin/richtypo.js/issues"
-	},
-	"license": "MIT",
-	"main": "build/richtypo.js",
-	"files": [
-		"build"
-	],
-	"engines": {
-		"node": ">=6"
-	},
+	"private": true,
 	"devDependencies": {
 		"@babel/cli": "^7.1.2",
 		"@babel/core": "^7.1.2",
+		"@babel/node": "^7.0.0",
 		"@babel/preset-env": "^7.1.0",
 		"babel-core": "^7.0.0-bridge",
 		"babel-jest": "^23.6.0",
@@ -36,13 +15,17 @@
 		"eslint-config-tamia": "^6.0.2",
 		"eslint-plugin-import": "^2.14.0",
 		"gh-pages": "^2.0.1",
+		"lerna": "^3.4.3",
 		"jest": "^23.6.0",
 		"prettier": "^1.14.3",
 		"serve": "^10.0.2"
 	},
+	"engines": {
+		"node": ">=7"
+	},
 	"scripts": {
-		"build": "babel src --out-dir build --ignore **/*.test.js",
-		"build:watch": "babel -w src --out-dir build --ignore **/*.test.js",
+		"build": "babel packages/richtypo/src --out-dir packages/richtypo/build --ignore **/*.test.js",
+		"build:watch": "babel -w paclages/richtypo/src --out-dir packages/richtypo/build --ignore **/*.test.js",
 		"pretest": "npm run lint",
 		"test": "NODE_ENV=local jest",
 		"test:watch": "NODE_ENV=local jest --watch",
@@ -55,23 +38,5 @@
 		"gh-pages": "gh-pages -d example/build",
 		"prepare": "npm run build",
 		"publish": "npm publish"
-	},
-	"keywords": [
-		"typography",
-		"typo",
-		"html",
-		"quotes",
-		"prepositions",
-		"abbr",
-		"abbreviations",
-		"nobr",
-		"nbsp",
-		"punctuation",
-		"em-dash",
-		"ampersands",
-		"space"
-	],
-	"dependencies": {
-		"@babel/node": "^7.0.0"
 	}
 }
