--- a/packages/fr/package.json
+++ b/packages/fr/package.json
@@ -11,14 +11,9 @@
 	"peerDependencies": {
 		"richtypo": "^4.0.0"
 	},
-	"devDependencies": {
-		"@babel/cli": "^7.1.2",
-		"@babel/core": "^7.1.2",
-		"@babel/preset-env": "^7.1.0"
-	},
 	"scripts": {
-		"build": "babel src --out-dir . --ignore **/*.test.js",
-		"watch": "babel -w src --out-dir . --ignore **/*.test.js",
+		"build": "babel src --out-dir build/ --ignore **/*.test.js",
+		"watch": "babel -w src --out-dir build/ --ignore **/*.test.js",
 		"prepare": "npm run build"
 	}
 }
