--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,4 @@
 {
-  "packages": [
-    "packages/*"
-  ],
-  "version": "0.0.0"
+	"packages": ["packages/*", "example/**"],
+	"version": "0.0.0"
 }
