--- a/packages/en/package.json
+++ b/packages/en/package.json
@@ -1,16 +1,16 @@
 {
-	"name": "richtypo-rules-en",
-	"version": "1.0.0",
-	"description": "English Typography Rules for richtypo.js",
-	"main": "en.js",
-	"author": "David Bismut",
-	"license": "MIT",
-	"dependencies": {
-		"richtypo": "^4.0.0"
-	},
-	"scripts": {
-		"build": "babel src --out-dir . --ignore **/*.test.js",
-		"watch": "babel -w src --out-dir . --ignore **/*.test.js",
-		"prepare": "npm run build"
-	}
+  "name": "richtypo-rules-en",
+  "version": "1.0.0",
+  "description": "English Typography Rules for richtypo.js",
+  "main": "en.js",
+  "author": "David Bismut",
+  "license": "MIT",
+  "dependencies": {
+    "richtypo-rules-common": "^1.0.0"
+  },
+  "scripts": {
+    "build": "babel src --out-dir . --ignore **/*.test.js",
+    "watch": "babel -w src --out-dir . --ignore **/*.test.js",
+    "prepare": "npm run build"
+  }
 }
