--- a/.eslintignore
+++ b/.eslintignore
@@ -1,6 +1,10 @@
 coverage/*
 __tests__/
 *.jsx
+
+# prevents linting of build files at the root of packages
 packages/*/*.js
+
+# allows linting of babel.config.js in packages
 !packages/*/*.config.js
 node_modules/
