--- a/packages/richtypo-rules-fr/package.json
+++ b/packages/richtypo-rules-fr/package.json
@@ -2,15 +2,15 @@
   "name": "richtypo-rules-fr",
   "version": "1.0.0",
   "description": "French Typography Rules for richtypo.js",
-  "main": "fr.js",
+  "main": "lib/fr.js",
   "author": "David Bismut",
   "license": "MIT",
   "dependencies": {
     "richtypo-rules-common": "^1.0.0"
   },
   "scripts": {
-    "build": "babel src --out-dir . --ignore **/*.test.js",
-    "watch": "babel -w src --out-dir . --ignore **/*.test.js",
+    "build": "babel src --out-dir lib --ignore **/*.test.js",
+    "watch": "babel -w src --out-dir lib --ignore **/*.test.js",
     "prepare": "npm run build"
   }
 }
