--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,6 @@
 coverage/
 node_modules/
-
-# prevents commit of build files at the root of packages
-packages/*/*.js
-
-# allows commit of babel.config.js in packages
-!packages/*/*.config.js
-
+lib/
 .DS_Store
 Thumbs.db
 .idea/
@@ -15,3 +9,4 @@ Thumbs.db
 *.sublime-workspace
 *.log
 .eslintcache
+Changelog.md
