--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "jest": {
     "coveragePathIgnorePatterns": [
-      "<rootDir>/packages/[^/]*/[^/]*\\.js"
+      "<rootDir>/packages/**/lib/**/*\\.js"
     ]
   },
   "scripts": {
