--- a/packages/richtypo-rules-common/package.json
+++ b/packages/richtypo-rules-common/package.json
@@ -3,7 +3,15 @@
   "version": "1.0.0",
   "description": "Common Typography Rules for Richtypo",
   "main": "lib/common.js",
-  "author": "David Bismut",
+  "author": {
+    "name": "Artem Sapegin",
+    "url": "http://sapegin.me/"
+  },
+  "contributors": [
+    {
+      "name": "David Bismut"
+    }
+  ],
   "license": "MIT",
   "scripts": {
     "build": "babel src --out-dir lib --ignore **/*.test.js",
