Chore: Always run source files in tests
I hope it works :pray:

--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "node": ">=8.10"
   },
   "jest": {
+    "moduleNameMapper": {
+      "<rootDir>/packages/(.*)/lib/(.*)$": "<rootDir>/packages/$1/src/$2"
+    },
     "coveragePathIgnorePatterns": [
       "<rootDir>/packages/**/lib/**/*\\.js"
     ]
