Chore: Tweak linter config

--- a/package.json
+++ b/package.json
@@ -32,9 +32,10 @@
     "prepare": "lerna bootstrap",
     "pretest": "npm run lint",
     "test": "jest",
+    "posttest": "npm run format",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "lint": "eslint packages/*/src --cache --fix",
+    "lint": "eslint . --cache --fix",
     "format": "prettier --write '**/*.{js,md}'",
     "gh-pages": "gh-pages -d example/build",
     "example:build": "lerna exec --scope richtypo-example -- npm run build",
