Chore: Fix coverage ignore RegExp

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
       "<rootDir>/packages/(.*)/lib/(.*)$": "<rootDir>/packages/$1/src/$2"
     },
     "coveragePathIgnorePatterns": [
-      "<rootDir>/packages/**/lib/**/*\\.js"
+      "<rootDir>/packages/(.*)/lib/(.*)\\.js"
     ]
   },
   "scripts": {
