Add Russian example, tweak example site a bit

--- a/example/package.json
+++ b/example/package.json
@@ -8,7 +8,8 @@
     "fledermaus": "^7.1.0",
     "richtypo": "^4.0.0",
     "richtypo-rules-en": "^1.0.0",
-    "richtypo-rules-fr": "^1.0.0"
+    "richtypo-rules-fr": "^1.0.0",
+    "richtypo-rules-ru": "^1.0.0"
   },
   "scripts": {
     "build": "babel-node src",
