Chore: Rename bootstrap script back to prepare

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     ]
   },
   "scripts": {
-    "bootstrap": "lerna bootstrap",
+    "prepare": "lerna bootstrap",
     "pretest": "npm run lint",
     "test": "jest",
     "posttest": "npm run format",
