Chore: Add lint-staged

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,5 @@
 # editorconfig.org
+root = true
 
 [*]
 indent_style = tab
@@ -7,6 +8,6 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.{json,yml,md,babelrc,eslintrc,remarkrc}]
+[*.{json,yml,md,babelrc,remarkrc}]
 indent_style = space
 indent_size = 2
