--- a/packages/richtypo-rules-en/package.json
+++ b/packages/richtypo-rules-en/package.json
@@ -1,6 +1,6 @@
 {
   "name": "richtypo-rules-en",
-  "version": "1.0.0",
+  "version": "1.0.0-beta.0",
   "description": "English Typography Rules for richtypo.js",
   "main": "lib/en.js",
   "author": {
@@ -14,7 +14,7 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "richtypo-rules-common": "^1.0.0"
+    "richtypo-rules-common": "^1.0.0-beta.0"
   },
   "scripts": {
     "build": "babel src --out-dir lib --ignore **/*.test.js",
