--- a/example/package.json
+++ b/example/package.json
@@ -1,15 +1,15 @@
 {
   "name": "richtypo-example",
-  "version": "1.0.0",
+  "version": "4.0.0",
   "main": "build/index.html",
   "private": true,
   "license": "MIT",
   "dependencies": {
     "fledermaus": "^7.1.0",
-    "richtypo": "^4.0.0-beta.0",
-    "richtypo-rules-en": "^1.0.0-beta.0",
-    "richtypo-rules-fr": "^1.0.0-beta.0",
-    "richtypo-rules-ru": "^1.0.0-beta.0"
+    "richtypo": "^4.0.0",
+    "richtypo-rules-en": "^4.0.0",
+    "richtypo-rules-fr": "^4.0.0",
+    "richtypo-rules-ru": "^4.0.0"
   },
   "scripts": {
     "build": "babel-node src",
