--- a/packages/richtypo-rules-fr/package.json
+++ b/packages/richtypo-rules-fr/package.json
@@ -1,12 +1,12 @@
 {
   "name": "richtypo-rules-fr",
-  "version": "1.0.0-beta.0",
+  "version": "4.0.0",
   "description": "French Typography Rules for richtypo.js",
   "main": "lib/fr.js",
   "author": "David Bismut",
   "license": "MIT",
   "dependencies": {
-    "richtypo-rules-common": "^1.0.0-beta.0"
+    "richtypo-rules-common": "^4.0.0"
   },
   "scripts": {
     "build": "babel src --out-dir lib --ignore **/*.test.js",
