--- a/packages/richtypo-rules-ru/package.json
+++ b/packages/richtypo-rules-ru/package.json
@@ -1,6 +1,6 @@
 {
   "name": "richtypo-rules-ru",
-  "version": "1.0.0-beta.0",
+  "version": "4.0.0",
   "description": "Russian typography rules for Richtypo",
   "main": "lib/ru.js",
   "author": {
@@ -9,7 +9,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "richtypo-rules-common": "^1.0.0-beta.0"
+    "richtypo-rules-common": "^4.0.0"
   },
   "scripts": {
     "build": "babel src --out-dir lib --ignore **/*.test.js",
