--- a/packages/richtypo/package.json
+++ b/packages/richtypo/package.json
@@ -1,6 +1,6 @@
 {
   "name": "richtypo",
-  "version": "4.0.0-beta.0",
+  "version": "4.0.0",
   "description": "HTML typography enhancer with extensible rules",
   "homepage": "https://github.com/sapegin/richtypo.js",
   "author": {
