--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "private": true,
   "devDependencies": {
-    "@babel/cli": "^7.1.5",
-    "@babel/core": "^7.1.6",
-    "@babel/node": "^7.0.0",
-    "@babel/preset-env": "^7.1.6",
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/node": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "babel-core": "^7.0.0-bridge",
-    "babel-jest": "^23.6.0",
+    "babel-jest": "^24.9.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
-    "eslint": "^5.9.0",
-    "eslint-config-tamia": "^6.0.2",
-    "gh-pages": "^2.0.1",
-    "husky": "^1.2.0",
-    "jest": "^23.6.0",
-    "lerna": "^3.4.3",
-    "lint-staged": "^8.1.0",
-    "prettier": "^1.15.2",
-    "serve": "^10.1.1"
+    "eslint": "^6.2.0",
+    "eslint-config-tamia": "^7.0.0",
+    "gh-pages": "^2.1.1",
+    "husky": "^3.0.4",
+    "jest": "^24.9.0",
+    "lerna": "^3.16.4",
+    "lint-staged": "^9.2.3",
+    "prettier": "^1.18.2",
+    "serve": "^11.1.0"
   },
   "engines": {
     "node": ">=8.10"
@@ -42,8 +42,7 @@
     "gh-pages": "gh-pages -d example/build",
     "example:build": "lerna exec --scope richtypo-example -- npm run build",
     "example:serve": "lerna exec --scope richtypo-example -- npm run serve",
-    "publish": "npm publish",
-    "precommit": "lint-staged"
+    "publish": "npm publish"
   },
   "license": "MIT",
   "lint-staged": {
@@ -54,6 +53,15 @@
     "*.{js,jsx}": [
       "eslint --fix",
       "git add"
+    ],
+    "*.js": [
+      "eslint --fix",
+      "git add"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
