chore: npm run prepare → npm run bootstrap

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     ]
   },
   "scripts": {
-    "prepare": "lerna bootstrap",
+    "bootstrap": "lerna bootstrap",
     "pretest": "npm run lint",
     "test": "jest",
     "posttest": "npm run format",
